tests/NormalTests/paczka1/fuzzy1/41830480.err
Error in line 3: Dfne6DWPsj S250 10,8
Error in line 1: Tdg2X A413 4,1
Error in line 12: S558 S250 30,04
Error in line 14: zPvpQSeAK1M A413 45,7
Error in line 20: Tdg2X A413 15,4
Error in line 25: Dfne6DWPsj A413 33,3
Error in line 22: S558 A594 204,5
Error in line 33: S558 A413 80,2
Error in line 35: eHZg S558 25,5
Error in line 32: Dfne6DWPsj A594 95,1
